--- a/static/css/style.styl
+++ b/static/css/style.styl
@@ -26,6 +26,7 @@ body
 	-moz-font-smooth never
 
 .clear
+	height 90px
 	clear both
 
 #body
@@ -35,7 +36,7 @@ body
 	bottom 0px
 	right 0px
 
-.page
+#home
 	width 100%
 	height 100%
 	min-height 680px
@@ -46,6 +47,7 @@ body
 
 #bg
 	position fixed
+	background-color #EDF7FF
 	background linear-gradient(top left, #D1EBFF 0%, white 60%)
 	top 0px
 	left 0px
@@ -216,6 +218,7 @@ h3
 			vertical-align top
 
 #info
+	background-color green
 	background linear-gradient(bottom left, #00a200 0%, green 22%, green 60%, #00be00 100%)
 	color #fff
 	padding 0 0 70px 0
@@ -521,7 +524,7 @@ a.icon
 	background #FFE100
 
 	
-#sessions
+#sessions, #sponsors
 	position relative
 	
 	a
@@ -624,14 +627,6 @@ a.icon
 				background jscampYellow
 				height 150px
 				
-				.who
-					width 150px
-					height 150px
-					font-size 8em
-					background  linear-gradient(top left, #eee 0%, #999 90%)
-					color #fff
-					text-align center
-				
 				> *
 					border-radius 8px 0 0 0
 					
@@ -661,6 +656,9 @@ a.icon
 		background-color jscampYellow
 		padding-bottom 80px
 		
+		a
+			color jscampGreen
+		
 	#venuepicture
 		h2
 			color #fff
@@ -686,6 +684,7 @@ a.icon
 	@css {
 		.black {
 			padding: 80px 0;
+			background-color: #444;
 			background: -moz-radial-gradient(center, circle cover, #595959 1%, #000000 100%); /* FF3.6+ */
 			background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(1%,#595959), color-stop(100%,#000000)); /* Chrome,Safari4+ */
 			background: -webkit-radial-gradient(center, circle cover, #595959 1%,#000000 100%); /* Chrome10+,Safari5.1+ */
@@ -712,7 +711,33 @@ a.icon
 			margin-top 20px
 			
 #sponsors
-	height 120px
+	margin 60px auto 0 auto
+
+	#sponsorsdesc
+		
+		h2
+			color jscampBlue
+			text-align left
+		
+		.speakers
+			li
+				width 200px
+											
+				.img
+					height 115px
+					
+				.links
+					a
+						float right
+						
+					.www
+						font-size 1em
+						font-weight bold
+						text-align center
+						line-height 2.4em
+						font-family Courier, monospace
+						color #fff
+						text-decoration none
 	
 	
 #team
