--- a/static/css/style.css
+++ b/static/css/style.css
@@ -372,6 +372,9 @@ h3 {
   padding: 0 0 70px 0;
   margin-bottom: 100px;
 }
+#info .black {
+  padding-bottom: 65px;
+}
 #info a {
   color: #fff;
   text-decoration: none;
