Added ticket sale announcement

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -372,8 +372,20 @@ h3 {
   padding: 0 0 70px 0;
   margin-bottom: 100px;
 }
+#info .announcement {
+  position: relative;
+  top: 50px;
+  padding: 25px 40px;
+  background: #ffa500;
+  -webkit-border-radius: 8px 8px 8px 8px;
+  -moz-border-radius: 8px 8px 8px 8px;
+  -o-border-radius: 8px 8px 8px 8px;
+  -ms-border-radius: 8px 8px 8px 8px;
+  border-radius: 8px 8px 8px 8px;
+  border: 1px solid #fff;
+}
 #info .black {
-  padding-bottom: 65px;
+  padding-bottom: 40px;
 }
 #info a {
   color: #fff;
@@ -386,7 +398,6 @@ h3 {
   font-size: 1.1em;
 }
 #info #facts a {
-  display: block;
   cursor: pointer;
   font-family: 'Doppio One';
   font-weight: 300;
