--- a/static/css/style.styl
+++ b/static/css/style.styl
@@ -224,9 +224,17 @@ h3
 	padding 0 0 70px 0
 	margin-bottom 100px
 	
-	.black
-		padding-bottom 65px
+	.announcement
+		position relative
+		top 50px
+		padding 25px 40px
+		background jscampYellow
+		border-radius 8px 8px 8px 8px
+		border 1px solid #fff
 	
+	.black
+		padding-bottom 40px
+		
 	a
 		color #fff
 		text-decoration none
@@ -238,7 +246,6 @@ h3
 		font-size 1.1em
 
 		a
-			display block
 			cursor pointer
 			font-family 'Doppio One'
 			font-weight 300
