--- a/static1/css/style.styl
+++ b/static1/css/style.styl
@@ -508,7 +508,7 @@ h3
 
 
 a.icon
-	display inline-block
+	display block
 	width 40px
 	height 40px
 	cursor pointer
@@ -523,6 +523,15 @@ a.icon
 		background-image url(../img/twitter.png)
 		background-repeat no-repeat
 		background-position 6px 6px
+	
+	&.gplus
+		color #fff !important
+		font-size 2.5em
+		line-height 40px
+		font-weight bold
+		font-family Courier, monospace
+		text-align center
+		text-decoration none
 
 		
 #js
