--- a/static2/css/style.styl
+++ b/static2/css/style.styl
@@ -275,8 +275,9 @@ h3
 				&.sprints, &.talks, &.venue
 					line-height 1.7em
 					
-		p
-			margin-top 92px		
+		p.margin
+			margin-top 10px
+			padding-bottom 12px
 			
 		form
 			position relative
