--- a/static2/css/style.styl
+++ b/static2/css/style.styl
@@ -226,12 +226,14 @@ h3
 	
 	.announcement
 		position relative
-		top 50px
-		padding 25px 40px
+		display inline-block
+		top 58px
+		padding 25px 70px
+		margin -25px 0
 		background jscampYellow
 		border-radius 8px 8px 8px 8px
 		border 1px solid #fff
-	
+		
 	.black
 		padding-bottom 40px
 		
