--- a/static2/css/style.css
+++ b/static2/css/style.css
@@ -374,8 +374,10 @@ h3 {
 }
 #info .announcement {
   position: relative;
-  top: 50px;
-  padding: 25px 40px;
+  display: inline-block;
+  top: 58px;
+  padding: 25px 70px;
+  margin: -25px 0;
   background: #ffa500;
   -webkit-border-radius: 8px 8px 8px 8px;
   -moz-border-radius: 8px 8px 8px 8px;
