Added early-bird pricing

--- a/static2/css/style.styl
+++ b/static2/css/style.styl
@@ -234,6 +234,11 @@ h3
 		border-radius 8px 8px 8px 8px
 		border 1px solid #fff
 		
+		img
+			position absolute
+			top -50px
+			right -60px
+		
 	.black
 		padding-bottom 40px
 		
