--- a/static2/css/style.css
+++ b/static2/css/style.css
@@ -386,6 +386,11 @@ h3 {
   border-radius: 8px 8px 8px 8px;
   border: 1px solid #fff;
 }
+#info .announcement img {
+  position: absolute;
+  top: -50px;
+  right: -60px;
+}
 #info .black {
   padding-bottom: 40px;
 }
