--- a/static5/css/style2.styl
+++ b/static5/css/style2.styl
@@ -102,7 +102,7 @@ body
 	border-radius 12px
 	position relative
 	top -30px
-
+	animation blink 1s infinite linear
 
 #ticketsale
 	position relative
@@ -113,6 +113,10 @@ body
 	color jscampYellow
 	font-family 'Doppio One'
 	opacity 0
+	line-height 1.3em
+	
+	a
+		color jscampBlue
 	
 #la_logo
 	line-height 0.8em
