--- a/static5/css/style6.styl
+++ b/static5/css/style6.styl
@@ -711,7 +711,7 @@ a.icon
 			margin-bottom 20px
 			position absolute
 			top 0px
-			transition background-color 0.5s ease-out
+			transition all 0.5s ease-out
 			border 2px solid #fff
 			
 			&#workshops
